--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,4 +76,48 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/newpost_button" />
 
+    <TextView
+        android:id="@+id/test_text"
+        android:layout_width="99dp"
+        android:layout_height="46dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="32dp"
+        android:text="test"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_map" />
+
+    <Button
+        android:id="@+id/test_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Test"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_logout" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Name"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/currentuser_txt"
+        android:layout_marginLeft="16dp"
+        android:inputType="numberDecimal"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/button122"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Button"
+        app:layout_constraintLeft_toRightOf="@+id/editText"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/test_text" />
+
 </android.support.constraint.ConstraintLayout>
