--- a/app/src/main/res/menu/menu_tabs.xml
+++ b/app/src/main/res/menu/menu_tabs.xml
@@ -1,11 +1,15 @@
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.test.mynewtest2.TabActivity">
+    tools:context="com.test.mynewtest2.TabsActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_devtools"
+        android:orderInCategory="100"
+        android:title="@string/action_devtools"
         app:showAsAction="never" />
 </menu>
