--- a/app/src/main/res/menu/menu_tabs.xml
+++ b/app/src/main/res/menu/menu_tabs.xml
@@ -12,4 +12,7 @@
         android:orderInCategory="100"
         android:title="@string/action_devtools"
         app:showAsAction="never" />
+    <item android:id="@+id/action_logout"
+        android:title="@string/log_out"
+        app:showAsAction="never" />
 </menu>
