--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustResize"
     tools:context="com.test.mynewtest2.ItemsActivity">
 
     <android.support.design.widget.TabLayout
@@ -19,6 +20,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_new_post"
+        android:windowSoftInputMode="adjustResize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
